class TaskList {
public:
    virtual void display() = 0;
};