@startuml
skinparam class {
BackgroundColor PaleGreen
ArrowColor SeaGreen
BorderColor SpringGreen
}
skinparam stereotypeCBackgroundColor YellowGreen

component Database(server){
}

class RequestHandler <<static(server)>> {
    //processes sql queries
}

class Reminder <<static(server)>> {
    //telegram bot
    - get_todays_tasks(user_id)
    + send_notification()
}

class TaskManager <<static>> {
    + OP_ADD(task_id)

    + OP_DELETE(task_id)

    + OP_GETTASKS(date)
}

class Authenticator <<static>> {
    + OP_LOGIN

    + OP_NEWUSER
}

class Register <<static>> {
    - login
    - password
    - telegram

    + bool complete_registration()
}

class Login <<static>> {
    - login
    - password
}

class Task {
    - id : int
    - date : string
    - description : string
    - state : State
    + set_description(string);
    + set_state(State state)
    + get_date()
    + std::string get_description()
    + state get_state();
    + int get_id();
}
enum State {
    complited
    open
    expired
}

class User {
    - name
    - username
    - telegram
    + add_task()
    + delete_task()
    + edit_task()
}

abstract class TaskList {
    + display()
}

class TasksForToday {
    - get_current_date()
}
RequestHandler -- Reminder

RequestHandler -- Authenticator
Authenticator -- Register
Authenticator -- Login

RequestHandler -- TaskManager
TaskManager -- TaskList
TaskList <|-- TasksForToday
TaskManager -- Task
Task -- State
TaskManager -- User
@enduml
